调整首页个人用户点击悬浮

--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -40,23 +40,24 @@
         </div>
         <div id="perPicDiv">
             <img id="perPic" class="img-circle" src="../img/gangtiexia.jpg"/>
+            <!--个人详情-->
+            <div id="person-detail" class="pull-right">
+                <div id="person-pic">
+                    <img src="../img/gangtiexia.jpg"/>
+                </div>
+                <div id="person-name">
+                    <span>风一样的男子</span>
+                    <br/><span style="font-size: 15px !important;font-weight: 300;color:#808080;float: left;">15005422208</span>
+                </div>
+                <div id="loginOut">
+                    <div id="per-sz"><img src="../img/per-sz.png"/><a href="person.html?index=personInfo">个人设置</a></div>
+                    <div id="login-out"><img src="../img/login-out.png"/><a href="##">退出登录</a></div>
+                </div>
+            </div>
         </div>
     </div>
     <!--导航栏部分结束-->
-    <div id="person-detail" class="pull-right" style="display: none;">
-        <div id="person-pic">
-            <img src="../img/gangtiexia.jpg"/>
-        </div>
-        <div id="person-name">
-            <span>风一样的男子</span>
-            <br/><span style="font-size: 15px !important;font-weight: 300;color:#808080;float: left;">15005422208</span>
-        </div>
-        <div id="loginOut">
-            <div id="per-sz"><img src="../img/per-sz.png"/><a href="person.html?index=personInfo">个人设置</a></div>
-            <div id="login-out"><img src="../img/login-out.png"/><a href="##">退出登录</a></div>
-        </div>
 
-    </div>
     <!--导航部分开始-->
     <div id="daohang">
         <div id="daohang1">
