--- a/src/main/resources/static/html/fabu.html
+++ b/src/main/resources/static/html/fabu.html
@@ -1,144 +1,150 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css"/>
-    <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/fabu.css">
-    <link href="../newFileInput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="../newFileInput/font-awesome.min.css" media="all" rel="stylesheet" type="text/css"/>
-    <link href="../newFileInput/themes/explorer-fa/theme.css" media="all" rel="stylesheet" type="text/css"/>
-    <script src="../js/jquery-3.1.1.min.js"></script>
-    <script src="../newFileInput/js/plugins/sortable.js" type="text/javascript"></script>
-    <script src="../newFileInput/js/fileinput.js" type="text/javascript"></script>
-    <script src="../newFileInput/js/locales/zh.js" type="text/javascript"></script>
-    <script src="../newFileInput/themes/explorer-fa/theme.js" type="text/javascript"></script>
-    <script src="../newFileInput/themes/fa/theme.js" type="text/javascript"></script>
-    <script src="../newFileInput/popper.min.js" type="text/javascript"></script>
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/common.js"></script>
-    <script src="../js/fabu.js"></script>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-<!--导航栏部分-->
-<div id="nav">
-    <div id="logo">
-        <img id="logoPic" src="../img/skss.png"/>
-    </div>
-    <div id="nav-caidan">
-        <ul>
-            <li><a href="##" class="nav-a">已发布</a></li>
-            <li><a href="##" class="nav-a">收藏夹</a></li>
-            <li><a href="##" class="nav-a">人气闲置<span id="nav-label" class="label label-danger">N</span></a></li>
-        </ul>
-    </div>
-    <div id="nav-input">
-        <input id="sousuoInput" type="text" placeholder="嗖嗖就有~">
-        <span id="sousouSpan" class="glyphicon glyphicon-search"></span>
-    </div>
-    <div id="perPicDiv">
-        <img id="perPic" class="img-circle" src="../img/gangtiexia.jpg"/>
-    </div>
-</div>
-<!--导航栏部分结束-->
-
-<!--个人悬浮开始-->
-<div id="person-detail" class="pull-right" style="display: none;">
-    <div id="person-pic">
-        <img src="../img/gangtiexia.jpg"/>
-    </div>
-    <div id="person-name">
-        <span>风一样的男子</span>
-        <br/><span style="font-size: 15px !important;font-weight: 300;color:#808080;float: left;">15005422208</span>
-    </div>
-    <div id="loginOut">
-        <div id="per-sz"><img src="../img/per-sz.png"/><a href="##">个人设置</a></div>
-        <div id="login-out"><img src="../img/login-out.png"/><a href="##">退出登录</a></div>
-    </div>
-</div>
-<!--个人悬浮结束-->
-<!--发布part1-->
-<div id="fabu-part1">
-    <div id="main-pic-div">
-        <form enctype="multipart/form-data">
-            <div class="file-loading">
-                <input id="file-1" name="file-1" type="file" accept="image/*">
+	<head>
+	<link rel="stylesheet" href="../css/bootstrap.min.css" />
+	<link rel="stylesheet" href="../css/bootstrap-theme.min.css" />
+	<link rel="stylesheet" href="../css/common.css">
+	<link rel="stylesheet" href="../css/fabu.css">
+	<link href="../newFileInput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
+	<link href="../newFileInput/font-awesome.min.css" media="all" rel="stylesheet" type="text/css"/>
+	<link href="../newFileInput/themes/explorer-fa/theme.css" media="all" rel="stylesheet" type="text/css"/>
+	<script src="../js/jquery-3.1.1.min.js"></script>
+	<script src="../newFileInput/js/plugins/sortable.js" type="text/javascript"></script>
+	<script src="../newFileInput/js/fileinput.js" type="text/javascript"></script>
+	<script src="../newFileInput/js/locales/zh.js" type="text/javascript"></script>
+	<script src="../newFileInput/themes/explorer-fa/theme.js" type="text/javascript"></script>
+	<script src="../newFileInput/themes/fa/theme.js" type="text/javascript"></script>
+	<script src="../newFileInput/popper.min.js" type="text/javascript"></script>
+	<script src="../js/bootstrap.min.js"></script>
+	<script src="../js/common.js"></script>
+	<script src="../js/fabu.js"></script>
+		<meta charset="UTF-8">
+		<title></title>
+	</head>
+	<body>
+	<!--导航栏部分-->
+	<nav class="navbar navbar-default" role="navigation" id="navHeader">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a id="skssA" class="navbar-brand" href="#"><img src="../img/skss.png" id="skssPic"></a>
+			</div>
+			<div>
+				<ul class="nav navbar-nav">
+					<li class="margin20px"><a href="#">已发布</a></li>
+					<li class="margin20px"><a href="#">人气闲置</a></li>
+					<li class="margin20px"><a href="#">收藏夹</a></li>
+					<li class="margin20px"><a href="#">发布闲置</a></li>
+					<li class="margin20px"><a href="#">留白功能</a></li>
+				</ul>
+			</div>
+			<form class="navbar-form navbar-left" role="search" id="searchForm">
+				<div class="form-group">
+					<input type="text" class="form-control" placeholder="嗖嗖就有">
+				</div>
+				<button type="submit" class="btn btn-danger">搜索</button>
+			</form>
+			<div id="perDiv" class="navbar-header navbar-right">
+				<a id="perA" class="navbar-brand" href="#"><img src="../img/gangtiexia.jpg" id="perPic" class="img-circle"></a>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+		
+		<!--个人悬浮开始-->
+		<div id="person-detail" class="pull-right" style="display: none;">
+			<div id="person-pic">
+				<img src="../img/gangtiexia.jpg" />
+			</div>
+			<div id="person-name">
+				<span>风一样的男子</span>
+				<br/><span style="font-size: 15px !important;font-weight: 300;color:#808080;float: left;">15005422208</span>
+			</div>
+			<div id="loginOut">
+				<div id="per-sz"><img src="../img/per-sz.png"/><a href="##">个人设置</a></div>
+				<div id="login-out"><img src="../img/login-out.png"/><a href="##">退出登录</a></div>
+			</div>
+		</div>
+		<!--个人悬浮结束-->
+		<!--发布part1-->
+		<div id="fabu-part1">
+			<div id="main-pic-div">
+				<form enctype="multipart/form-data">
+        			<div class="file-loading">
+           				<input id="file-1" name="file-1" type="file" accept="image/*">
+       				 </div>
+    			</form>
+			</div>
+			<div id="main-other-div">
+				<div>
+				<div id="main-other-div-select1">
+					<label for="name"><h4><span class="label label-primary">发布类型</span></h4></label>
+				    <select id="fabu-type-select" class="form-control">
+				      <option value="">请选择类型</option>
+				      <option value="SM">数码闲置</option>
+				      <option value="SJ">书籍闲置</option>
+				      <option value="RC">日常用品</option>
+				      <option value="JZ">兼职信息</option>
+				    </select>
+				</div>
+				<div id="main-other-div-select2">
+					<label for="name"><h4><span class="label label-success">所在区域</span></h4></label>
+				    <select id="fabu-area-select" class="form-control">
+				      <option value="">请选择区域</option>
+				      <option value="A">女神A区</option>
+				      <option value="B">男神B区</option>
+				      <option value="C">神秘C区 </option>
+				      <option value="Z">其他 </option>
+				    </select>
+				</div>
+				</div>
+				<hr id="hr-line" />
+				<div id="main-other-name">
+					<div><label>名称</label>&nbsp;<input id="fabuName" type="text" placeholder="给宝贝起个响亮的名字" /></div>
+					<div><label>价格</label>&nbsp;<input id="fabuPrice" type="number" placeholder="理想的出手价格"/></div>
+					<div><label>特点</label>&nbsp;<input id="fabuWords" type="text" placeholder="宝贝的亮点"/><img id="tedian-pic" src="../img/tedian-open.png" title="选择"/></div>
+					<div><label> QQ&nbsp; </label>&nbsp;<input id="fabuQq" type="text"  placeholder="留下QQ方便约"/></div>
+					<div><label>微信</label>&nbsp;<input id="fabuWx" type="text"   placeholder="留下微信方便约"/></div>
+				</div>
+				<div id="main-other-system">
+					<button class="btn btn-danger" value="颜值高" onclick="selectBtn(this)">颜值高</button>
+					<button class="btn btn-primary" value="全新" onclick="selectBtn(this)">全新</button>
+					<button class="btn btn-success" value="国行" onclick="selectBtn(this)">国行</button>
+					<button class="btn btn-default" value="港版" onclick="selectBtn(this)">港版</button>
+					<button class="btn btn-primary" value="全新" onclick="selectBtn(this)">全新</button>
+					<button class="btn btn-default" value="九成新" onclick="selectBtn(this)">九成新</button>
+					<button class="btn btn-success" value="价格可刀" onclick="selectBtn(this)">价格可刀</button>
+					<button class="btn btn-default" value="一口价" onclick="selectBtn(this)">一口价</button>
+					<button class="btn btn-default" value="送货上门" onclick="selectBtn(this)">送货上门</button>
+					<button class="btn btn-default" value="自取" onclick="selectBtn(this)">自取</button>
+					<button class="btn btn-danger" value="无押金" onclick="selectBtn(this)">无押金</button>
+				</div>
+			</div>
+		</div>
+		
+		<!--发布part2-->
+		<div id="fabu-part2" >
+            <form enctype="multipart/form-data">
+       			<div class="file-loading">
+            		<input id="file-2" name="file-2" type="file" multiple accept="image/*">
+       			 </div>
+    		</form>
+            <div id="fabu-part2-text-div">
+            	<textarea id="fabu-part2-text" class="form-control" rows="5" placeholder="介绍一下你的宝贝吧"></textarea>
             </div>
-        </form>
-    </div>
-    <div id="main-other-div">
-        <div>
-            <div id="main-other-div-select1">
-                <label for="name"><h4><span class="label label-primary">发布类型</span></h4></label>
-                <select id="fabu-type-select" class="form-control">
-                    <option value="">请选择类型</option>
-                    <option value="SM">数码闲置</option>
-                    <option value="SJ">书籍闲置</option>
-                    <option value="RC">日常用品</option>
-                    <option value="JZ">兼职信息</option>
-                </select>
-            </div>
-            <div id="main-other-div-select2">
-                <label for="name"><h4><span class="label label-success">所在区域</span></h4></label>
-                <select id="fabu-area-select" class="form-control">
-                    <option value="">请选择区域</option>
-                    <option value="A">女神A区</option>
-                    <option value="B">男神B区</option>
-                    <option value="C">神秘C区</option>
-                    <option value="Z">其他</option>
-                </select>
-            </div>
-        </div>
-        <hr id="hr-line"/>
-        <div id="main-other-name">
-            <div><label>名称</label>&nbsp;<input id="fabuName" type="text" placeholder="给宝贝起个响亮的名字"/></div>
-            <div><label>价格</label>&nbsp;<input id="fabuPrice" type="number" placeholder="理想的出手价格"/></div>
-            <div><label>特点</label>&nbsp;<input id="fabuWords" type="text" placeholder="宝贝的亮点"/><img id="tedian-pic"
-                                                                                                    src="../img/tedian-open.png"
-                                                                                                    title="选择"/></div>
-            <div><label> QQ&nbsp; </label>&nbsp;<input id="fabuQq" type="text" placeholder="留下QQ方便约"/></div>
-            <div><label>微信</label>&nbsp;<input id="fabuWx" type="text" placeholder="留下微信方便约"/></div>
-        </div>
-        <div id="main-other-system">
-            <button class="btn btn-danger" value="颜值高" onclick="selectBtn(this)">颜值高</button>
-            <button class="btn btn-primary" value="全新" onclick="selectBtn(this)">全新</button>
-            <button class="btn btn-success" value="国行" onclick="selectBtn(this)">国行</button>
-            <button class="btn btn-default" value="港版" onclick="selectBtn(this)">港版</button>
-            <button class="btn btn-primary" value="全新" onclick="selectBtn(this)">全新</button>
-            <button class="btn btn-default" value="九成新" onclick="selectBtn(this)">九成新</button>
-            <button class="btn btn-success" value="价格可刀" onclick="selectBtn(this)">价格可刀</button>
-            <button class="btn btn-default" value="一口价" onclick="selectBtn(this)">一口价</button>
-            <button class="btn btn-default" value="送货上门" onclick="selectBtn(this)">送货上门</button>
-            <button class="btn btn-default" value="自取" onclick="selectBtn(this)">自取</button>
-            <button class="btn btn-danger" value="无押金" onclick="selectBtn(this)">无押金</button>
-        </div>
-    </div>
-</div>
-
-<!--发布part2-->
-<div id="fabu-part2">
-    <form enctype="multipart/form-data">
-        <div class="file-loading">
-            <input id="file-2" name="file-2" type="file" multiple accept="image/*">
-        </div>
-    </form>
-    <div id="fabu-part2-text-div">
-        <textarea id="fabu-part2-text" class="form-control" rows="5" placeholder="介绍一下你的宝贝吧"></textarea>
-    </div>
-</div>
-<!--警告-->
-<div id="myAlert" class="alert alert-danger">
-    <a href="#" class="close">&times;</a>
-    <strong>警告!</strong>
-    <p id="alert-p"></p>
-</div>
-<div id="fabu-btn">
-    <button class="btn btn-primary" id="fabu-cancel">取消发布</button>
-    <button class="btn btn-danger" id="fabu-confirm">确认发布</button>
-</div>
-</body>
-
+		</div>
+		<!--警告-->
+		<div id="myAlert" class="alert alert-danger">
+			<a href="#" class="close">&times;</a>
+			<strong>警告!</strong><p id="alert-p"></p>
+		</div>
+		<div id="fabu-btn">
+			<button class="btn btn-primary" id="fabu-cancel">取消发布</button>
+			<button class="btn btn-danger" id="fabu-confirm">确认发布</button>
+		</div>
+	</body>
+	
 </html>
  
