--- a/src/main/resources/static/html/person.html
+++ b/src/main/resources/static/html/person.html
@@ -12,9 +12,9 @@
 		<link rel="stylesheet" href="../css/modal/showDetailsCSS.css" />
 		<link rel="stylesheet" href="../css/personCenter/editPerFaBu.css" />
 		<link rel="stylesheet" href="../css/special/hover-select-special.css" />
+		<link rel="stylesheet" href="../css/common.css" />
 		<script src="../js/jquery-3.1.1.min.js"></script>
 		<script src="../js/bootstrap.min.js"></script>
-		<script src="../js/personCenterJS/person.js"></script>
 		<script src="../js/jquery.form.js"></script>
 		<script src="../js/personCenterJS/personSC.js"></script>
 		<script src="../js/personCenterJS/personRecycle.js"></script>
@@ -22,6 +22,7 @@
 		<script src="../js/personCenterJS/editPerFaBu.js"></script>
 		<script src="../js/jquery.cookie.js"></script>
 		<script src="../js/cookie.js"></script>
+		<script src="../js/personCenterJS/person.js"></script>
 	</head>
 	<body>
 	<!--导航栏部分-->
@@ -54,23 +55,6 @@
 			</div>
 		</div>
 	</nav>
-		
-		<!--个人悬浮开始-->
-		<div id="person-detail" class="pull-right" style="display: none;">
-			<div id="person-pic">
-				<img src="../img/gangtiexia.jpg" />
-			</div>
-			<div id="person-name">
-				<span>风一样的男子</span>
-				<br/><span style="font-size: 15px !important;font-weight: 300;color:#808080;float: left;">15005422208</span>
-			</div>
-			<div id="loginOut">
-				<div id="per-sz"><img src="../img/per-sz.png"/><a href="##">个人设置</a></div>
-				<div id="login-out"><img src="../img/login-out.png"/><a href="##">退出登录</a></div>
-			</div>
-		</div>
-		<!--个人悬浮结束-->
-		
 		<!--个人信息部分开始-->
 		<div id="person-div">
 			<div id="per-pic">
