--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -21,20 +21,20 @@
 		<nav class="navbar navbar-default" role="navigation" id="navHeader">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a id="skssA" class="navbar-brand" href="#"><img src="../img/skss.png" id="skssPic"></a>
+					<a id="skssA" class="navbar-brand" href="main.html"><img src="../img/skss.png" id="skssPic"></a>
 				</div>
 				<div>
 					<ul class="nav navbar-nav">
-						<li class="margin20px"><a href="#">已发布</a></li>
-						<li class="margin20px"><a href="#">人气闲置</a></li>
-						<li class="margin20px"><a href="#">收藏夹</a></li>
-						<li class="margin20px"><a href="#">发布闲置</a></li>
-						<li class="margin20px"><a href="#">留白功能</a></li>
+						<li class="margin20px"><a href="person.html?index=personFB">已发布</a></li>
+						<li class="margin20px"><a href="##">人气闲置</a></li>
+						<li class="margin20px"><a href="person.html?index=personSC">收藏夹</a></li>
+						<li class="margin20px"><a id="fabu-a">发布闲置</a></li>
+						<li class="margin20px"><a href="##">留白功能</a></li>
 					</ul>
 				</div>
 				<form class="navbar-form navbar-left" role="search" id="searchForm">
 					<div class="form-group">
-						<input type="text" class="form-control" placeholder="嗖嗖就有">
+						<input type="text" class="form-control" placeholder="嗖嗖就有" id="sousuoInput">
 					</div>
 					<button type="submit" class="btn btn-danger">搜索</button>
 				</form>
