--- a/src/main/resources/static/html/fabu.html
+++ b/src/main/resources/static/html/fabu.html
@@ -26,48 +26,32 @@
 	<nav class="navbar navbar-default" role="navigation" id="navHeader">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a id="skssA" class="navbar-brand" href="#"><img src="../img/skss.png" id="skssPic"></a>
+				<a id="skssA" class="navbar-brand" href="main.html"><img src="../img/skss.png" id="skssPic"></a>
 			</div>
 			<div>
 				<ul class="nav navbar-nav">
-					<li class="margin20px"><a href="#">已发布</a></li>
-					<li class="margin20px"><a href="#">人气闲置</a></li>
-					<li class="margin20px"><a href="#">收藏夹</a></li>
-					<li class="margin20px"><a href="#">发布闲置</a></li>
-					<li class="margin20px"><a href="#">留白功能</a></li>
+					<li class="margin20px"><a href="person.html?index=personFB">已发布</a></li>
+					<li class="margin20px"><a href="##">人气闲置</a></li>
+					<li class="margin20px"><a href="person.html?index=personSC">收藏夹</a></li>
+					<li class="margin20px"><a id="fabu-a">发布闲置</a></li>
+					<li class="margin20px"><a href="##">留白功能</a></li>
 				</ul>
 			</div>
 			<form class="navbar-form navbar-left" role="search" id="searchForm">
 				<div class="form-group">
-					<input type="text" class="form-control" placeholder="嗖嗖就有">
+					<input type="text" class="form-control" placeholder="嗖嗖就有" id="sousuoInput">
 				</div>
-				<button type="submit" class="btn btn-danger">搜索</button>
+				<button type="submit" class="btn btn-danger" id="sousuoBtn">搜索</button>
 			</form>
 			<div id="perDiv" class="navbar-header navbar-right">
-				<a id="perA" class="navbar-brand" href="#"><img src="../img/gangtiexia.jpg" id="perPic" class="img-circle"></a>
+				<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="../img/gangtiexia.jpg" id="perPic" class="img-circle"></a>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
-					<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+					<li><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+					<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-		
-		<!--个人悬浮开始-->
-		<div id="person-detail" class="pull-right" style="display: none;">
-			<div id="person-pic">
-				<img src="../img/gangtiexia.jpg" />
-			</div>
-			<div id="person-name">
-				<span>风一样的男子</span>
-				<br/><span style="font-size: 15px !important;font-weight: 300;color:#808080;float: left;">15005422208</span>
-			</div>
-			<div id="loginOut">
-				<div id="per-sz"><img src="../img/per-sz.png"/><a href="##">个人设置</a></div>
-				<div id="login-out"><img src="../img/login-out.png"/><a href="##">退出登录</a></div>
-			</div>
-		</div>
-		<!--个人悬浮结束-->
 		<!--发布part1-->
 		<div id="fabu-part1">
 			<div id="main-pic-div">
