--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -36,13 +36,13 @@
 					<div class="form-group">
 						<input type="text" class="form-control" placeholder="嗖嗖就有" id="sousuoInput">
 					</div>
-					<button type="submit" class="btn btn-danger">搜索</button>
+					<button type="submit" class="btn btn-danger" id="sousuoBtn">搜索</button>
 				</form>
 				<div id="perDiv" class="navbar-header navbar-right">
-					<a id="perA" class="navbar-brand" href="#"><img src="../img/gangtiexia.jpg" id="perPic" class="img-circle"></a>
+					<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="../img/gangtiexia.jpg" id="perPic" class="img-circle"></a>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
-						<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+						<li><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+						<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
 					</ul>
 				</div>
 			</div>
