--- a/src/main/resources/static/html/person.html
+++ b/src/main/resources/static/html/person.html
@@ -22,6 +22,7 @@
 		<script src="../js/personCenterJS/editPerFaBu.js"></script>
 		<script src="../js/jquery.cookie.js"></script>
 		<script src="../js/cookie.js"></script>
+		<script src="../js/common.js"></script>
 		<script src="../js/personCenterJS/person.js"></script>
 	</head>
 	<body>
