--- a/src/main/resources/static/html/fabu.html
+++ b/src/main/resources/static/html/fabu.html
@@ -44,10 +44,10 @@
 				<button type="submit" class="btn btn-danger" id="sousuoBtn">搜索</button>
 			</form>
 			<div id="perDiv" class="navbar-header navbar-right">
-				<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="../img/gangtiexia.jpg" id="perPic" class="img-circle"></a>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
-					<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+				<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="" id="perPic" class="img-circle"></a>
+				<ul class="nav navbar-nav navbar-right" id="loginOrLoginOut">
+					<li class="loginOrLoginOut"><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+					<li class="loginOrLoginOut"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
 				</ul>
 			</div>
 		</div>
