--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -15,6 +15,7 @@
 		<script src="../js/bootstrap.min.js"></script>
 		<script src="../js/main.js"></script>
 		<script src="../js/common.js"></script>
+		<script src="../js/cookie.js"></script>
 	</head>
 	<body>
 		<!--导航栏部分-->
@@ -39,10 +40,10 @@
 					<button type="submit" class="btn btn-danger" id="sousuoBtn">搜索</button>
 				</form>
 				<div id="perDiv" class="navbar-header navbar-right">
-					<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="../img/gangtiexia.jpg" id="perPic" class="img-circle"></a>
-					<ul class="nav navbar-nav navbar-right">
-						<li><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
-						<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
+					<a id="perA" class="navbar-brand" href="person.html?index=personZL"><img src="" id="perPic" class="img-circle"></a>
+					<ul class="nav navbar-nav navbar-right" id="loginOrLoginOut">
+						<li class="loginOrLoginOut"><a href="login.html?index=regist"><span class="glyphicon glyphicon-user"></span> 注册</a></li>
+						<li class="loginOrLoginOut"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> 登录</a></li>
 					</ul>
 				</div>
 			</div>
