--- a/src/main/resources/static/html/fabu.html
+++ b/src/main/resources/static/html/fabu.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<link rel="stylesheet" href="../css/bootstrap.min.css" />
-	<link rel="stylesheet" href="../css/bootstrap-theme.min.css" />
-	<link rel="stylesheet" href="../css/fabu.css">
-	<link rel="stylesheet" href="../css/common.css">
-	<link href="../newFileInput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
-	<link href="../newFileInput/font-awesome.min.css" media="all" rel="stylesheet" type="text/css"/>
-	<link href="../newFileInput/themes/explorer-fa/theme.css" media="all" rel="stylesheet" type="text/css"/>
-	<script src="../js/jquery-3.1.1.min.js"></script>
-	<script src="../newFileInput/js/plugins/sortable.js" type="text/javascript"></script>
-	<script src="../newFileInput/js/fileinput.js" type="text/javascript"></script>
-	<script src="../newFileInput/js/locales/zh.js" type="text/javascript"></script>
-	<script src="../newFileInput/themes/explorer-fa/theme.js" type="text/javascript"></script>
-	<script src="../newFileInput/themes/fa/theme.js" type="text/javascript"></script>
-	<script src="../newFileInput/popper.min.js" type="text/javascript"></script>
-	<script src="../js/bootstrap.min.js"></script>
-	<script src="../js/common.js"></script>
-	<script src="../js/fabu.js"></script>
+		<link rel="stylesheet" href="../css/bootstrap.min.css" />
+		<link rel="stylesheet" href="../css/bootstrap-theme.min.css" />
+		<link rel="stylesheet" href="../css/fabu.css">
+		<link rel="stylesheet" href="../css/common.css">
+		<link href="../newFileInput/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
+		<link href="../newFileInput/font-awesome.min.css" media="all" rel="stylesheet" type="text/css"/>
+		<link href="../newFileInput/themes/explorer-fa/theme.css" media="all" rel="stylesheet" type="text/css"/>
+		<script src="../js/jquery-3.1.1.min.js"></script>
+		<script src="../newFileInput/js/plugins/sortable.js" type="text/javascript"></script>
+		<script src="../newFileInput/js/fileinput.js" type="text/javascript"></script>
+		<script src="../newFileInput/js/locales/zh.js" type="text/javascript"></script>
+		<script src="../newFileInput/themes/explorer-fa/theme.js" type="text/javascript"></script>
+		<script src="../newFileInput/themes/fa/theme.js" type="text/javascript"></script>
+		<script src="../newFileInput/popper.min.js" type="text/javascript"></script>
+		<script src="../js/bootstrap.min.js"></script>
+		<script src="../js/common.js"></script>
+		<script src="../js/fabu.js"></script>
+		<script src="../js/cookie.js"></script>
 		<meta charset="UTF-8">
 		<title></title>
 	</head>
