--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -14,6 +14,7 @@
 	<script src="../js/home.js"></script>
 	<script src="../js/common.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/cookie.js"></script>
 	<meta charset="UTF-8">
 	</head>
 	<body>
