--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -29,7 +29,7 @@
 						<li class="margin20px"><a href="person.html?index=personFB">已发布</a></li>
 						<li class="margin20px"><a href="##">人气闲置</a></li>
 						<li class="margin20px"><a href="person.html?index=personSC">收藏夹</a></li>
-						<li class="margin20px"><a id="fabu-a">发布闲置</a></li>
+						<li class="margin20px"><a href="##" id="fabu-a">发布闲置</a></li>
 						<li class="margin20px"><a href="##">留白功能</a></li>
 					</ul>
 				</div>
