--- a/src/main/resources/static/html/forum/forumMain1.html
+++ b/src/main/resources/static/html/forum/forumMain1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../css/bootstrap.css">
 
 
 </head>
