发布闲置图片上传

--- a/src/main/resources/static/html/main.html
+++ b/src/main/resources/static/html/main.html
@@ -16,6 +16,7 @@
 		<script src="../js/main.js"></script>
 		<script src="../js/common.js"></script>
 		<script src="../js/cookie.js"></script>
+		<script src="../js/fileURL.js"></script>
 	</head>
 	<body>
 		<!--导航栏部分-->
