--- a/src/main/resources/static/html/person.html
+++ b/src/main/resources/static/html/person.html
@@ -23,6 +23,7 @@
 		<script src="../js/jquery.cookie.js"></script>
 		<script src="../js/cookie.js"></script>
 		<script src="../js/common.js"></script>
+		<script src="../js/fileURL.js"></script>
 		<script src="../js/personCenterJS/person.js"></script>
 	</head>
 	<body>
@@ -56,17 +57,7 @@
 			</div>
 		</div>
 	</nav>
-		<!--个人信息部分开始-->
-		<div id="person-div">
-			<div id="per-pic">
-				<img src="../img/gangtiexia.jpg"/>
-			</div>
-			<div id="per-others">
-				<div id="per-name">Double大宝</div>
-				<div id="per-amount">已发布150次，被收藏24次</div>
-			</div>
-		</div>
-		<!--个人信息部分结束-->
+
 		
 		<!--展示部分-->
 		<div id="show-part">
@@ -77,7 +68,7 @@
 				<div id="per-huishou" class="shake-owner"><span class="glyphicon glyphicon-trash"></span>&nbsp;&nbsp;&nbsp;回&nbsp;收&nbsp;站</div>
 			</div>
 			<!--个人信息修改部分开始-->
-			<div id="per-click-show" style="">
+			<div id="per-click-show">
 				<div id="own-ziliao">
 					<!--编辑头像-->
 					<div id="edit-pic">
